--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,26 @@
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="/apple-touch-icon.png"
+            href="umap-to-uefn-converter/apple-touch-icon.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="/favicon-32x32.png"
+            href="umap-to-uefn-converter/favicon-32x32.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="/favicon-16x16.png"
+            href="umap-to-uefn-converter/favicon-16x16.png"
         />
-        <link rel="manifest" href="/site.webmanifest" />
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="manifest" href="umap-to-uefn-converter/site.webmanifest" />
+        <link
+            rel="mask-icon"
+            href="umap-to-uefn-converter/safari-pinned-tab.svg"
+            color="#5bbad5"
+        />
         <meta name="msapplication-TileColor" content="#2b5797" />
         <meta name="theme-color" content="#ffffff" />
         <!--
